S3 및 입력값들에 대한 저장 로직 1차
S3 및 입력값들에 대한 저장 로직 1차

--- a/src/main/resources/static/css/list/applicationWrite.css
+++ b/src/main/resources/static/css/list/applicationWrite.css
@@ -119,6 +119,13 @@ input[type="text"]
     border-radius: 6px;
 }
 
+.imgArea
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .contArea
 {
     margin-top: 40px;
