--- a/src/main/resources/templates/list/applicationWrite.html
+++ b/src/main/resources/templates/list/applicationWrite.html
@@ -42,9 +42,9 @@
             
             
             <section>
-                <form action="/upload" method="post">
+                <form action="/contest/application/upload" method="post">
                     <div class="applyContent">
-                        <input type="text" placeholder="제목을 입력해주세요." required>
+                        <input type="text" name="applyTitle" placeholder="제목을 입력해주세요." required>
                         <div class="contArea">
                             <div class="imgArea"></div>
                             <div class="textArea"></div>
