Header, Footer 쪽 마이페이지 주소 수정

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -40,7 +40,7 @@
 
             <!-- 마이페이지 이동 버튼 -->
             <li class="list">
-                <a th:href="@{/mypage}">
+                <a th:href="@{/users/mypage}">
                     <span class="icon">
                         <i class="fa-solid fa-user-pen"></i>
                     </span>
