--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -41,7 +41,9 @@
                     <div th:text="${notice.noticeContent}"></div> <!-- 공지사항 내용 -->
                     <!-- 수정 및 삭제 버튼 (userEmail이 'admin'일 때만 보임) -->
                     <div class="buttons" th:if="${userEmail == 'admin'}">
-                        <a th:href="@{/notice/edit(noticeNum=${notice.noticeNum})}" class="btn btn-primary btn-sm">수정</a>
+                        <form th:action="@{/notice/edit(noticeNum=${notice.noticeNum})}" method="get" style="display: inline;">
+                            <button type="submit" class="btn btn-primary btn-sm">수정</button>
+                        </form>
                         <form th:action="@{/notice/delete(noticeNum=${notice.noticeNum})}" method="post" style="display: inline;">
                             <button type="submit" class="btn btn-danger btn-sm">삭제</button>
                         </form>
