:truck: 메서드 명 변경

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,7 @@
 <th:block th:fragment="footerFragment">
     <div class="quickMenu">
         <ul>
-            <li class="list chat" onclick="chatting()">
+            <li class="list chat" onclick="clickChatIcon()">
                 <span class="icon">
                     <i class="fa-regular fa-comment-dots"></i>
                     <span class="notification-badge" style="display: none;">N</span> <!-- 알림 배지 -->
