상세조회로직삭제
상세조회로직삭제

--- a/src/main/resources/static/css/fragments/header.css
+++ b/src/main/resources/static/css/fragments/header.css
@@ -42,7 +42,7 @@ html {
     height: 40px;
 }
 
-.search-bar input {
+.header-search-bar {
     border: none;
     outline: none;
     height: 30px;
