--- a/src/main/resources/static/css/notifications/noticeList.css
+++ b/src/main/resources/static/css/notifications/noticeList.css
@@ -1,6 +1,6 @@
 /* 컨테이너가 페이지의 남은 공간을 차지하게 설정 */
 .container {
-    flex: 1; /* 이 부분을 추가하여 컨테이너가 남은 공간을 채우도록 설정 */
+    flex: 1; /* 부모 요소가 flex 컨테이너여야 작동 */
     max-width: 1100px;
     background-color: white;
     padding: 20px;
@@ -49,6 +49,10 @@ h1 {
     background-color: white;
 }
 
+.toggle-row:hover {
+    background-color: #f8f9fa; /* 행 위로 마우스를 올렸을 때 배경색 추가 */
+}
+
 .active-toggle {
     background-color: rgb(193, 192, 255);
     color: white;
@@ -78,6 +82,7 @@ h1 {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    text-align: center;
 }
 
 .buttons a:hover {
