--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
                     <img th:src="@{/img/fragments/logoG.png}" alt="Logo" style="width: 150px; height: 65px;">
                 </a>
                 <div class="search-bar">
-                    <input type="text" placeholder="검색">
+                    <input class="header-search-bar" type="text" placeholder="검색">
                     <button type="submit">
                         <img src="https://img.icons8.com/ios-filled/50/000000/search.png" alt="search" width="20" />
                     </button>
