--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -58,18 +58,18 @@
             <ul class="pagination justify-content-center">
                 <!-- 이전 페이지 버튼 (현재 페이지가 1인 경우 비활성화) -->
                 <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">
-                    <a class="page-link" th:href="@{/list(page=${currentPage - 1})}">&laquo;</a>
+                    <a class="page-link" th:href="@{/notice/list(page=${currentPage - 1})}">&laquo;</a>
                 </li>
 
                 <!-- 페이지 번호 반복 -->
                 <li class="page-item" th:each="i : ${#numbers.sequence(1, totalPages)}"
                     th:classappend="${i == currentPage} ? 'active'">
-                    <a class="page-link" th:href="@{/list(page=${i})}" th:text="${i}"></a>
+                    <a class="page-link" th:href="@{/notice/list(page=${i})}" th:text="${i}"></a>
                 </li>
 
                 <!-- 다음 페이지 버튼 (현재 페이지가 마지막 페이지인 경우 비활성화) -->
                 <li class="page-item" th:classappend="${currentPage == totalPages} ? 'disabled'">
-                    <a class="page-link" th:href="@{/list(page=${currentPage + 1})}">&raquo;</a>
+                    <a class="page-link" th:href="@{/notice/list(page=${currentPage + 1})}">&raquo;</a>
                 </li>
             </ul>
         </nav>
