--- a/src/main/resources/templates/notifications/noticeWrite.html
+++ b/src/main/resources/templates/notifications/noticeWrite.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/fragments/layout}">
@@ -16,7 +15,7 @@
             <div class="form-group">
                 <label for="date">날짜</label>
                 <input type="date" id="date" name="date" class="form-control"
-                    th:value="${#dates.format(new java.util.Date(), 'yyyy-MM-dd')}" required>
+                       th:value="${#dates.format(new java.util.Date(), 'yyyy-MM-dd')}" readonly required>
             </div>
             <div class="form-group">
                 <label for="noticeTitle">제목</label>
@@ -30,13 +29,12 @@
             <input type="hidden" id="noticeTempSave" name="noticeTempSave" value="false">
 
             <div class="btn-group">
-                <a th:href="@{/notice/list}" class="btn-secondary">목록보기</a>
-                <button type="submit" class="btn-primary">등록</button>
-                <button type="button" class="btn-secondary" id="tempSaveBtn">임시 저장</button>
+                <a th:href="@{/notice/list}" class="btn btn-secondary">목록보기</a>
+                <button type="submit" class="btn btn-primary">등록</button>
+                <button type="button" class="btn btn-secondary" id="tempSaveBtn">임시 저장</button>
             </div>
         </form>
     </div>
-
 </th:block>
 
 </html>
