--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -8,9 +8,9 @@
             integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 
     <!-- jQuery CDN (최신 버전) -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-            integrity="sha256-JlPkFq1dsJz5Y1J8AmSNxT4Ofu1idGZZ84dQvYB2eDs="
-            crossorigin="anonymous"></script>
+<!--    <script src="https://code.jquery.com/jquery-3.7.1.min.js"-->
+<!--            integrity="sha256-JlPkFq1dsJz5Y1J8AmSNxT4Ofu1idGZZ84dQvYB2eDs="-->
+<!--            crossorigin="anonymous"></script>-->
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
