글작성과 글수정 한번에 쓰기
수정버튼까지 연결함(값은 못가져옴)

--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -39,9 +39,9 @@
                 <td colspan="2">
                     <!-- 공지사항 내용 (모든 사용자에게 보임) -->
                     <div th:text="${notice.noticeContent}"></div> <!-- 공지사항 내용 -->
-                    <!-- 수정 및 삭제 버튼 (userEmail이 'admin'일 때만 보임) -->
-                    <div class="buttons" th:if="${userEmail == 'admin'}">
-                        <form th:action="@{/notice/edit(noticeNum=${notice.noticeNum})}" method="get" style="display: inline;">
+                    <!-- 수정 및 삭제 버튼 (userRole이 'ROLE_ADMIN'일 때만 보임) -->
+                    <div class="buttons" th:if="${userRole == 'ROLE_ADMIN'}">
+                        <form th:action="@{/notice/admin/write(noticeNum=${notice.noticeNum})}" method="get" style="display: inline;">
                             <button type="submit" class="btn btn-primary btn-sm">수정</button>
                         </form>
                         <form th:action="@{/notice/delete(noticeNum=${notice.noticeNum})}" method="post" style="display: inline;">
@@ -74,9 +74,9 @@
             </ul>
         </nav>
 
-        <!-- 등록 버튼 (userEmail이 admin일 때만 보임) -->
-        <div class="buttons" th:if="${userEmail == 'admin'}">
-            <a th:href="@{/notice/admin/write}" class="btn">등록</a>
+        <!-- 등록 버튼 (userRole이 'ROLE_ADMIN'일 때만 보임) -->
+        <div class="buttons" th:if="${userRole == 'ROLE_ADMIN'}">
+            <a th:href="@{/notice/admin/write}" class="btn btn-primary">공지사항 등록</a>
         </div>
     </div>
 
