--- a/src/main/resources/templates/notifications/noticeWrite.html
+++ b/src/main/resources/templates/notifications/noticeWrite.html
@@ -3,34 +3,38 @@
       layout:decorate="~{/fragments/layout}">
 
 <head>
-    <title>공지사항 등록</title>
+    <title>공지사항 등록 & 수정</title>
     <link rel="stylesheet" th:href="@{/css/notifications/noticeWrite.css}">
     <script th:src="@{/js/notifications/noticeWrite.js}"></script>
 </head>
 <th:block layout:fragment="content">
     <!-- Main Content -->
     <div class="container">
-        <h2>공지사항 등록</h2>
+        <h2 th:text="${noticeDTO.noticeNum != null ? '공지사항 수정' : '공지사항 등록'}"></h2>
         <form id="noticeForm" th:action="@{/notice/admin/register}" method="post">
             <div class="form-group">
                 <label for="date">날짜</label>
                 <input type="date" id="date" name="date" class="form-control"
-                       th:value="${#dates.format(new java.util.Date(), 'yyyy-MM-dd')}" readonly required>
+                       th:value="${noticeDTO.noticeCreateTime != null ? #dates.format(noticeDTO.noticeCreateTime, 'yyyy-MM-dd') : #dates.format(new java.util.Date(), 'yyyy-MM-dd')}"
+                       readonly required>
             </div>
             <div class="form-group">
                 <label for="noticeTitle">제목</label>
-                <input type="text" id="noticeTitle" name="noticeTitle" class="form-control" placeholder="제목을 입력하세요" required>
+                <input type="text" id="noticeTitle" name="noticeTitle" class="form-control" placeholder="제목을 입력하세요"
+                       th:value="${noticeDTO.noticeTitle}" required>
             </div>
             <div class="form-group">
                 <label for="content">내용</label>
-                <textarea id="content" name="noticeContent" class="form-control" placeholder="내용을 입력하세요"></textarea>
+                <textarea id="content" name="noticeContent" class="form-control" placeholder="내용을 입력하세요" th:text="${noticeDTO.noticeContent}"></textarea>
             </div>
             <!-- hidden input to handle temporary save state -->
             <input type="hidden" id="noticeTempSave" name="noticeTempSave" value="false">
+            <!-- hidden input for noticeNum in case of update -->
+            <input type="hidden" id="noticeNum" name="noticeNum" th:value="${noticeDTO.noticeNum}">
 
             <div class="btn-group">
                 <a th:href="@{/notice/list}" class="btn btn-secondary">목록보기</a>
-                <button type="submit" class="btn btn-primary">등록</button>
+                <button type="submit" class="btn btn-primary" th:text="${noticeDTO.noticeNum != null ? '수정' : '등록'}"></button>
                 <button type="button" class="btn btn-secondary" id="tempSaveBtn">임시 저장</button>
             </div>
         </form>
