--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -76,7 +76,7 @@
 
         <!-- 등록 버튼 (userRole이 'ROLE_ADMIN'일 때만 보임) -->
         <div class="buttons" th:if="${userRole == 'ROLE_ADMIN'}">
-            <a th:href="@{/notice/admin/write}" class="btn btn-primary">공지사항 등록</a>
+            <a th:href="@{/notice/admin/write}" class="btn btn-primary">등록</a>
         </div>
     </div>
 
