알림 드롭다운 기능 추가
알림 드롭다운 기능 추가

--- a/src/main/resources/static/css/fragments/header.css
+++ b/src/main/resources/static/css/fragments/header.css
@@ -167,3 +167,16 @@ html {
     border-radius: 50%;
     font-size: 12px;
 }
+
+.nav-tabs {
+    margin-bottom: 10px;
+}
+
+.list-group-item {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.list-group-item:hover {
+    background-color: #f1f1f1;
+}
