scrap 기능 1차 적용중
scrap 기능 1차 적용중

--- a/src/main/resources/static/css/list/contestList.css
+++ b/src/main/resources/static/css/list/contestList.css
@@ -143,6 +143,11 @@ section
     color: var(--line-gray);
 }
 
+.fa-heart.active
+{
+    color: var(--main-color);
+}
+
 .listArea h5
 {
     font-size: var(--font-size-16);
