--- a/src/main/resources/templates/list/contestList.html
+++ b/src/main/resources/templates/list/contestList.html
@@ -31,12 +31,13 @@
 
                         <div class="listValue" th:each="list : ${contestList}">
                             <input type="hidden" id="contestId" th:value="${list.id}">
-                            <a href="#" th:onclick="hitUp(this)">
+                            <a href="#" th:href="@{/contest/view(contestId=${list.id})}" th:onclick="hitUp(this)">
                             <div class="listArea">
                                 <div class="content A">
                                     <div class="endDate"><span th:text="${list.endDate}">8</span>일 남음</div>
                                     <div class="industry" th:text="${list.conType}">식품/건강</div>
                                     <div class="heart">
+<!--                                        <i class="fa-solid fa-heart" th:onclick="return false;"></i>-->
                                         <i class="fa-solid fa-heart"></i>
                                     </div>
                                 </div>
