--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -29,7 +29,6 @@
             <!-- 공지사항 리스트 반복 -->
             <tr class="toggle-row" th:each="notice : ${noticeList}"
                 th:data-target="'#content-row-' + ${notice.noticeNum}" th:onclick="toggleContent(this)">
-                <td th:text="${notice.noticeNum}">공지사항 번호</td>
                 <td th:text="${notice.noticeTitle}"></td> <!-- 공지사항 제목 -->
                 <td th:text="${#dates.format(notice.noticeCreateTime, 'yyyy.MM.dd')}"></td> <!-- 공지사항 작성일 -->
             </tr>
@@ -43,7 +42,7 @@
                     <!-- 수정 및 삭제 버튼 (userRole이 'ROLE_ADMIN'일 때만 보임) -->
                     <div class="buttons" th:if="${userRole == 'ROLE_ADMIN'}">
                         <!-- 수정 버튼 -->
-                        <form th:action="@{/notice/admin/write(noticeNum=${notice.noticeNum})}" method="get" style="display: inline;">
+                        <form th:action="@{/notice/admin/write(noticeNum=${notice.noticeNum})}" method="post" style="display: inline;">
                             <button type="submit" class="btn btn-primary btn-sm">수정</button>
                         </form>
                         <!-- 삭제 버튼 -->
@@ -79,7 +78,9 @@
 
         <!-- 등록 버튼 (userRole이 'ROLE_ADMIN'일 때만 보임) -->
         <div class="buttons" th:if="${userRole == 'ROLE_ADMIN'}">
-            <a th:href="@{/notice/admin/write}" class="btn btn-primary">등록</a> <!-- method="post" 제거 -->
+            <form th:action="@{/notice/admin/write}" method="post">
+                <button type="submit" class="btn btn-primary">등록</button>
+            </form>
         </div>
     </div>
 
