--- a/src/main/resources/templates/list/contestList.html
+++ b/src/main/resources/templates/list/contestList.html
@@ -37,8 +37,7 @@
                                     <div class="endDate"><span th:text="${list.endDate}">8</span>일 남음</div>
                                     <div class="industry" th:text="${list.conType}">식품/건강</div>
                                     <div class="heart">
-<!--                                        <i class="fa-solid fa-heart" th:onclick="return false;"></i>-->
-                                        <i class="fa-solid fa-heart"></i>
+                                        <i class="fa-solid fa-heart" th:classappend="${scrapList != null && scrapList.contains(list.id) ? 'active' : ''}"></i>
                                     </div>
                                 </div>
                                 <h5 th:text="${list.conTitle}">글로벌 한방 브랜드 네이밍 콘테스트</h5>
