정렬 기능을 위한 로직 1단계
정렬 기능을 위한 로직 1단계 : select box의 값이 변경될 경우, 해당 option 값을 controller 단으로 보냄

--- a/src/main/resources/templates/list/contestList.html
+++ b/src/main/resources/templates/list/contestList.html
@@ -20,7 +20,7 @@
                 </div><!--listHead-->
                 <div class="listWrap">
                     <div class="orderWrap">
-                        <select name="orderType" id="" class="orderType">
+                        <select name="orderType" id="" class="orderType" th:onchange="order()">
                             <option value="current" selected>최신등록순</option>
                             <option value="latest">마감임박순</option>
                             <option value="price">총 상금순</option>
