--- a/src/main/resources/templates/notifications/eventList.html
+++ b/src/main/resources/templates/notifications/eventList.html
@@ -11,7 +11,9 @@
     <div class="container mt-5">
         <!-- 이벤트 등록 버튼 -->
         <div class="d-flex justify-content-end mb-4">
-            <a th:href="@{/event/admin/write}" class="btn">이벤트 등록</a>
+            <form th:action="@{/event/admin/write}" method="post">
+                <button type="submit" class="btn">이벤트 등록</button>
+            </form>
         </div>
 
         <div class="row row-cols-1 row-cols-md-4 g-4">
@@ -19,11 +21,13 @@
             <div class="col" th:each="event : ${eventList}">
                 <a th:href="@{/event/detail(eventNum=${event.eventNum})}" class="card-link">
                     <div class="card h-100">
-                        <img th:src="${event.eventImageUrl}" class="card-img-top"
-                             th:alt="${event.eventTitle} 이미지">
+                        <img th:src="${event.eventImageUrl}" class="card-img-top" th:alt="${event.eventTitle} 이미지">
                         <div class="card-body">
                             <h5 class="card-title" th:text="${event.eventTitle}">이벤트 제목</h5>
                             <p class="card-text" th:text="${event.eventContent}">이벤트 설명입니다.</p>
+                            <p class="card-text">
+                                <small class="text-muted" th:text="'등록일: ' + ${#dates.format(event.eventCreateTime, 'yyyy년 MM월 dd일')}"></small>
+                            </p>
                         </div>
                     </div>
                 </a>
