--- a/src/main/resources/templates/notifications/eventView.html
+++ b/src/main/resources/templates/notifications/eventView.html
@@ -10,19 +10,18 @@
 <th:block layout:fragment="content">
 
     <!-- 배너 이미지와 이벤트 제목 -->
-    <!-- 이벤트 상세 정보 -->
     <div class="event-container">
         <div class="banner">
-            <h2>이벤트 제목</h2>
+            <h2 th:text="${event.eventTitle}">이벤트 제목</h2>
         </div>
         <div class="event-details">
             <h2>이벤트 설명</h2>
-            <p>이곳에 이벤트에 대한 자세한 설명을 작성하세요. 이벤트의 목적, 주요 내용, 타겟 관객, 기대 효과 등을 포함할 수 있습니다.</p>
+            <p th:text="${event.eventContent}">이곳에 이벤트에 대한 자세한 설명을 작성하세요.</p>
 
             <div class="event-info">
                 <h3>이벤트 정보</h3>
                 <div class="info-item">
-                    <i class="bi bi-calendar-event-fill"></i> 날짜: 2024년 9월 15일
+                    <i class="bi bi-calendar-event-fill"></i> 날짜: <span th:text="${#dates.format(event.eventCreateTime, 'yyyy년 MM월 dd일')}">2024년 9월 15일</span>
                 </div>
                 <div class="info-item">
                     <i class="bi bi-clock-fill"></i> 시간: 오후 2:00 - 오후 6:00
