--- a/src/main/resources/templates/contest/ContestUpload.html
+++ b/src/main/resources/templates/contest/ContestUpload.html
@@ -9,7 +9,7 @@
 <th:block layout:fragment="content">
 <div class="Contestupload">
     <h1>어떤 작품이 필요하세요?</h1>
-    <form action="/contest" method="post" enctype="multipart/form-data">
+    <form action="/users/contest" method="post" enctype="multipart/form-data">
 
         <h3>회사명(단체명)</h3>
         <input class="companytype" type="text" id="conCompanyName" name="conCompanyName" placeholder="회사명을 입력해 주세요" required>
