--- a/src/main/resources/templates/contest/ContestUpload1.html
+++ b/src/main/resources/templates/contest/ContestUpload1.html
@@ -7,7 +7,7 @@
 <th:block layout:fragment="content">
 <div class="Contestupload1">
     <h1>예산은 어떻게 되나요?</h1>
-    <form action="/contest/budget" method="post" enctype="multipart/form-data">
+    <form action="/users/contest/budget" method="post" enctype="multipart/form-data">
         <h3>콘테스트 제목</h3>
         <div class="contest-title">
             <input class="companttype" type="text" id="conTitle" name="conTitle" placeholder="콘테스트 제목을 입력해 주세요." value="" maxlength="40" required>
