--- a/src/main/resources/templates/list/contestWrap_ajax.html
+++ b/src/main/resources/templates/list/contestWrap_ajax.html
@@ -7,13 +7,14 @@
 <div class="contestWrap">
     <div class="listValue" th:each="list : ${contestList}">
         <input type="hidden" id="contestId" th:value="${list.id}">
-        <a href="#" th:href="@{/contest/view(contestId=${list.id})}" th:onclick="hitUp(this)">
+        <a href="#" th:href="@{/contest/view(contestNum=${list.id})}" th:onclick="hitUp(this)">
+<!--        <a href="#" th:onclick="hitUp(this)">-->
             <div class="listArea">
                 <div class="content A">
                     <div class="endDate"><span th:text="${list.endDate}">8</span>일 남음</div>
                     <div class="industry" th:text="${list.conType}">식품/건강</div>
                     <div class="heart">
-                        <i class="fa-solid fa-heart" th:classappend="${scrapList != null && scrapList.contains(list.id) ? 'active' : ''}"></i>
+                        <i class="fa-solid fa-heart" th:classappend="${scrapList != null && scrapList.contains(list.id) ? 'active' : ''}" th:onclick="scrap(this)"></i>
                     </div>
                 </div>
                 <h5 th:text="${list.conTitle}">글로벌 한방 브랜드 네이밍 콘테스트</h5>
